objects/QIDC__OK_Download_Out_Of_Contract_ims__c.object
<CustomObject>
    <description>Store the picklist values when Download out of contract is enabled.</description>
    <fields>
        <fullName>QIDC__Download_for_Country_ims__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True to allow the download button for country else False</description>
        <inlineHelpText>True to allow the download button for country else False</inlineHelpText>
        <label>Download for Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Primary_Specialty1_Code_ims__c</fullName>
        <description>It stores the multiple codes selected by admin to restrict the download button for that specialty code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>It stores the multiple codes selected by admin to restrict the download button for that specialty code.</inlineHelpText>
        <label>Primary Specialty Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Professional_Type_Code_ims__c</fullName>
        <description>It stores the multiple codes selected by admin to restrict the download button for that selected location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Professional Type Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__User_Setting_External_ID_ims__c</fullName>
        <description>It stores the OneKey_User_Settings_ims__c record id with combination of country code</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>It stores the OneKey_User_Settings_ims__c record id with combination of country code</inlineHelpText>
        <label>User Settings External ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__User_Settings_Country_ims__c</fullName>
        <description>It stores selected Country Code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>It stores selected Country Code</inlineHelpText>
        <label>User Settings Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_Category_LEX_Code_ims__c</fullName>
        <description>It stores pull codes selected by admin to restrict the download button for the selected location</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>It stores pull codes selected by admin to restrict the download button for the selected location</inlineHelpText>
        <label>Workplace Category LEX Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_Type_TET_Code_ims__c</fullName>
        <description>It stores multiple codes selected by admin to restrict the download button for the selected location</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>It stores multiple codes selected by admin to restrict the download button for the selected location</inlineHelpText>
        <label>Workplace Type TET Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>OK Download Out Of Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OK Download Out Of Contract ims Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OK Download Out Of Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>